Fixed navsim debug pane whitespace

--- a/src/assets/css/navsim/debugInformation/debugInformation.css
+++ b/src/assets/css/navsim/debugInformation/debugInformation.css
@@ -1,6 +1,5 @@
 .debugInformation {
     display: none;
-    font-family: Inconsolata,monospace;
     color: #AAA;
     user-select: none;
 }
