--- a/src/assets/css/navsim/debugInformation/debugInformation__line.css
+++ b/src/assets/css/navsim/debugInformation/debugInformation__line.css
@@ -1,3 +1,4 @@
 .debugInformation__line {
-    white-space: pre;
+    font-family: Inconsolata,monospace;
+    margin: 0;
 }
